fix(frontend): new class `z-100` to set Navbar with highest z-index
- fixed badges appearing above the navbar

--- a/frontend/src/scss/global.scss
+++ b/frontend/src/scss/global.scss
@@ -6,3 +6,8 @@
     transform: translateY(-3px);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.366);
 }
+
+// for navbar etc.
+.z-100 {
+    z-index: 100;
+}
